.tempCodeRunnerFile.txt

Example.java:23: error: ';' expected
      System.out.println("All numbers are different")
                                                     ^
1 error
Tue 14 Jan 2020 10:11:43 CST
Input first number: Input second number: Input third number: All numbers are different
Example.java:23: error: ';' expected
      System.out.println("All numbers are different")
                                                     ^
1 error
Tue 14 Jan 2020 10:12:12 CST
Error: Could not find or load main class Example
Tue 14 Jan 2020 10:12:43 CST
Input first number: Input second number: Input third number: Neither all are equal or different
